--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <br>
       <img src="m.png" alt="profile" class="p"><span id="m">Malvin</span>
       <br>
-      <img src="i.jpg" alt="perfil" class="p"><span id="i">+55 8387947406</span>
+      <img src="i.jpg" alt="perfil" class="p"><span id="i">+55 **********</span>
       <br>
       <img class="p" src="pro.jpg" alt="profile"><span id="pro">El professor</span>
       <br>
